# os_images

./: BUILD  MODULE.bazel  README.md
.github/workflows/: autosd_build_and_publish.yml
autosd/: BUILD.bazel  README.md  image.aib.yml  vars-devel.yml
autosd/jumpstarter/: qemu.yaml
autosd/rootfs/etc/containers/systemd/qm.container.d/: 10-lola-ipc.conf
autosd/rootfs/usr/lib/tmpfiles.d/: lola_disc.conf
autosd/scripts/: aib.sh  build.sh  load.sh  save.sh  vars.sh
bazel_images/: score_autosd_images.MODULE.bazel
