# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "os_images",
    version = "1.0",
)

# Compliance and licensing toolchain
bazel_dep(name = "score_tooling", version = "1.1.2")
bazel_dep(name = "score_python_basics", version = "0.3.0")

# Formatting and linting helpers
bazel_dep(name = "score_format_checker", version = "0.1.1")
bazel_dep(name = "aspect_rules_lint", version = "1.3.1")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

# Documentation tools
bazel_dep(name = "score_docs_as_code", version = "2.0.3")
